--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.18.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
-    "path-to-regexp": "^6.2.1"
+    "path-to-regexp": "^6.2.1",
+    "socket.io": "^4.8.1"
   }
 }
